<resources>
    <string name="app_name">ScavengerHunt</string>
    <string name="title_activity_maps">Map</string>
    <string name="main_activity_title">Scavenger Hunt</string>
    <string name="main_activity_place">Place Pins</string>
    <string name="main_activity_find">Find Pins</string>
    <string name="fragment_database_test_title">Total Entries:</string>
    <string name="fragment_database_subtext_text">VV Query Result VV</string>
    <string name="google_places_key">AIzaSyCXvcFE44Cfksa914N-R_m3GqygPMlEeHk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_login_text">Login Screen</string>
    <string name="loginNameField">Display name</string>
    <string name="loginEmailField">Email</string>
    <string name="loginPasswordField">Password</string>
    <string name="loginPasswordFieldConfirm">Confirm your password</string>
    <string name="successful_login">Login Successful!</string>
    <string name="successful_register">Account successfuly registered!</string>
    <string name="err_msg_email">Invalid Email</string>
    <string name="err_msg_name">Invalid Name</string>
    <string name="err_msg_password">Invalid Password</string>
    <string name="err_msg_password_no_match">Passwords must match</string>
    <string name="find_pins">Find pins</string>
    <string name="place_pins">Place pins</string>
    <string name="messaging">Messaging</string>
    <string name="friends">Friends</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="empty_list_message">We couldn\'t find your friends.\n Use the box below to add them to your friends list.</string>
    <string name="logout">Logout</string>
    <string name="empty_chat_message">Break the ice! Send a message with the box below</string>
</resources>
