<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/map_bg"
        tools:context="edu.fsu.cs.mobile.scavengerhunt.MainActivity">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="serif-monospace"
            android:text="@string/main_activity_title"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textSize="44sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/place_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="55dp"
            android:text="@string/main_activity_place" />

        <Button
            android:id="@+id/find_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/place_b"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:text="@string/main_activity_find" />
</RelativeLayout>
</FrameLayout>
